--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ plugins {
 
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+
+    id 'org.jenkins-ci.jpi' version '0.39.0-rc.7'
 }
 
 sourceSets {
@@ -51,12 +53,30 @@ dependencies {
 
     // Test Frameworks
     testImplementation('junit:junit:4.12')
-    testImplementation('org.spockframework:spock-core:1.3-groovy-2.5')
+    testImplementation('com.homeaway.devtools.jenkins:jenkins-spock:2.0.1')
+    testImplementation('org.spockframework:spock-core:1.3-groovy-2.4')
     testImplementation('com.lesfurets:jenkins-pipeline-unit:1.5')
 
     testRuntimeOnly('org.junit.vintage:junit-vintage-engine:5.4.1')
 
     api('org.assertj:assertj-core:3.4.1')
+
+    testImplementation 'org.apache.maven:maven-model:3.6.3'
+    testImplementation 'org.apache.commons:commons-csv:1.4'
+    testImplementation 'ch.qos.logback:logback-core:1.2.3'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
+    testImplementation 'javax.servlet:javax.servlet-api:4.0.1'
+    testImplementation 'org.jenkins-ci.main:jenkins-core:2.190.2', {
+        exclude group: 'com.ibm.icu', module: 'icu4j'
+    }
+
+    testImplementation 'org.jenkins-ci.plugins.workflow:workflow-cps:2.77'
+    // provides isUnix() step
+    testImplementation 'org.jenkins-ci.plugins.workflow:workflow-basic-steps:2.16'
+    // provides sh() step
+    testImplementation 'org.jenkins-ci.plugins.workflow:workflow-durable-task-step:2.35'
+    // provides sshagent() step
+    testImplementation 'org.jenkins-ci.plugins:ssh-agent:1.16'
 }
 
 test {
