add linting arguments to fail on warning or above

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,3 +12,6 @@ jobs:
 
       - name: Run Groovy Linter
         uses: docker://nvuillam/npm-groovy-lint
+        with:
+          entrypoint: npm-groovy-lint
+          args: --failon warning
