--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -31,3 +31,22 @@ jobs:
           created_tag: ${{ steps.create_tag.outputs.tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up JDK 1.8
+        if: steps.create_tag.outputs.tag
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Publish Package
+        if: steps.create_tag.outputs.tag
+        run: |
+          chmod +x gradlew
+          ./gradlew publish closeAndReleaseRepository
+        env:
+          ORG_GRADLE_PROJECT_nexusUsername: ${{ secrets.NEXUS_USERNAME }}
+          ORG_GRADLE_PROJECT_nexusPassword: ${{ secrets.NEXUS_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingKeyId: ${{ secrets.SIGNING_KEY_ID }}
+          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SIGNING_KEY }}
+          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
+          ORG_GRADLE_PROJECT_CICD_TAG: ${{ steps.create_tag.outputs.tag }}
