--- a/build.gradle
+++ b/build.gradle
@@ -83,11 +83,10 @@ publishing {
 }
 
 signing {
-    def signingKeyId = findProperty('signingKeyId')
     def signingKey = findProperty('signingKey')
     def signingPassword = findProperty('signingPassword')
 
-    useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
+    useInMemoryPgpKeys(signingKey, signingPassword)
 
     sign publishing.publications.mavenJava
 }
