--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ plugins {
     // Needed for signing artifacts pushed to https://oss.sonatype.org/
     id 'signing'
     id 'io.codearte.nexus-staging' version '0.21.2'
+    id 'jacoco'
 }
 
 version = project.findProperty('CICD_TAG') ?: '0.0.0-DEV'
