remove v from tag format
The v causes issues with maven central

--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           release_branch: master
           release_strategy: tag
+          tag_format: "%major%.%minor%.%patch%"
       
       - name: Create Release
         if: steps.create_tag.outputs.tag
