change coverage report to run on build command
also change output to XML

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
 
       - name: Run Tests
-        run: ./gradlew test jacocoTestReport -i --no-daemon
+        run: ./gradlew build --no-daemon
 
       - name: Upload Coverage Report
         uses: codecov/codecov-action@v1
