--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ plugins {
     // Needed for signing artifacts pushed to https://oss.sonatype.org/
     id 'signing'
     id 'io.codearte.nexus-staging' version '0.21.2'
-    id 'jacoco'
 }
 
 version = project.findProperty('CICD_TAG') ?: '0.0.0-DEV'
@@ -101,15 +100,7 @@ javadoc {
 sourceSets {
     main {
         groovy {
-            srcDirs = ['src', 'vars']
-        }
-        resources {
-            srcDirs = ['resources']
-        }
-    }
-    test {
-        groovy {
-            srcDirs = ['test']
+            srcDirs = ['src']
         }
     }
 }
@@ -127,26 +118,6 @@ dependencies {
     // Use the latest Groovy version for building this library
     compileOnly('org.codehaus.groovy:groovy-all:2.5.11')
     compileOnly('com.cloudbees:groovy-cps:1.32')
-
-    // Jenkins Plugins
-    implementation('org.jenkins-ci.main:jenkins-core:2.23@jar')
-    implementation('org.jenkins-ci.plugins.workflow:workflow-step-api:2.22@jar')
-    implementation('org.jenkins-ci.plugins:pipeline-utility-steps:2.6.0@jar')
-
-    // Test Frameworks
-    testImplementation('junit:junit:4.12')
-    testImplementation('org.spockframework:spock-core:1.3-groovy-2.5')
-    testImplementation('com.lesfurets:jenkins-pipeline-unit:1.5')
-
-    testRuntimeOnly('org.junit.vintage:junit-vintage-engine:5.4.1')
-
-    api('org.assertj:assertj-core:3.4.1')
-}
-
-test {
-    useJUnitPlatform()
-
-    finalizedBy jacocoTestReport // report is always generated after tests run
 }
 
 // configure nexus staging plugin
@@ -158,11 +129,4 @@ nexusStaging {
 wrapper {
     gradleVersion = '6.5'
     distributionType = Wrapper.DistributionType.ALL
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        csv.enabled false
-    }
 }
