--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,20 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      - name: Run Groovy Linter
+        uses: docker://nvuillam/npm-groovy-lint
+        with:
+          entrypoint: npm-groovy-lint
+          args: --failon warning -l warning
+
+  test:
+    name: Functional
+    needs: linting
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
       - name: Set up Python
         uses: actions/setup-python@v2
 
@@ -22,12 +36,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r tests/requirements.txt
 
-      - name: Run Groovy Linter
-        uses: docker://nvuillam/npm-groovy-lint
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
-          entrypoint: npm-groovy-lint
-          args: --failon warning -l warning
-
+          username: ${{ secrets.DOCKER_PUSH_USERNAME }}
+          password: ${{ secrets.DOCKER_PUSH_TOKEN }}
+      
       - name: Test with pytest
+        env:
+          RUNNER_IMAGE: shadycuz/jenkins-std-lib
         run: |
           pytest
