--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ plugins {
 
     // Needed for signing artifacts pushed to https://oss.sonatype.org/
     id 'signing'
-    id 'io.codearte.nexus-staging' version '0.22.0'
+
+    id 'io.github.gradle-nexus.publish-plugin' version '1.0.0'
 }
 
 version = project.findProperty('CICD_TAG') ?: '0.0.0-DEV'
@@ -29,11 +30,26 @@ java {
     withSourcesJar()
 }
 
+groovydoc {
+    use = true
+    source = sourceSets.main.groovy
+}
+
+task groovydocJar(type: Jar, dependsOn: groovydoc ) {
+    classifier 'javadoc' // must use javadoc classifier to be able to deploy to Sonatype
+    from groovydoc.destinationDir
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
             artifactId = 'jenkins-std-lib'
             from components.java
+
+            artifact(groovydocJar) {
+                classifier = 'javadoc'
+            }
+
             versionMapping {
                 usage('java-api') {
                     fromResolutionOf('runtimeClasspath')
@@ -70,15 +86,11 @@ publishing {
             }
         }
     }
+}
 
+nexusPublishing {
     repositories {
-        maven {
-            url = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
-            credentials {
-                username = project.findProperty('nexusUsername') ?: ''
-                password = project.findProperty('nexusPassword') ?: ''
-            }
-        }
+        sonatype()
     }
 }
 
@@ -89,12 +101,6 @@ signing {
     useInMemoryPgpKeys(signingKey, signingPassword)
 
     sign publishing.publications.mavenJava
-}
-
-javadoc {
-    if (JavaVersion.current().isJava9Compatible()) {
-        options.addBooleanOption('html5', true)
-    }
 }
 
 sourceSets {
@@ -118,12 +124,6 @@ dependencies {
     // Use the latest Groovy version for building this library
     compileOnly('org.codehaus.groovy:groovy-all:2.5.11')
     compileOnly('com.cloudbees:groovy-cps:1.32')
-}
-
-// configure nexus staging plugin
-nexusStaging {
-    numberOfRetries = 50
-    delayBetweenRetriesInMillis = 5000
 }
 
 wrapper {
