--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - 'master'
   pull_request:
+    paths-ignore:
+      - '.gitub/workflows/release.yml'
 
 jobs:
   linting:
