--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,34 +5,42 @@ on:
     types: closed
 
 jobs:
-  snapshot:
-    name: Create Snapshot Release
+  tag:
+    name: Create Tag
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged && github.base_ref == 'develop'
+    if: github.event.pull_request.merged && github.base_ref == 'develop' || github.base_ref == 'master'
+    outputs:
+      tag: ${{ steps.create_tag.outputs.tag }}
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@master
-        with:
-          ref: 'develop'
+      - name: Set Tag Format
+        env:
+          BRANCH: ${{ github.base_ref }}
+        run: |
+          if [ "$BRANCH" = "develop" ]; then
+              echo "TAG_FORMAT=%major%.%minor%.%patch%-SNAPSHOT" >> $GITHUB_ENV
+          else
+              echo "TAG_FORMAT=%major%.%minor%.%patch%" >> $GITHUB_ENV
+          fi
 
-      - name: Create Snapshot Tag
-        id: snapshot_tag
+      - name: Create Tag
+        id: create_tag
         uses: K-Phoen/semver-release-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          release_branch: develop
+          release_branch: ${{ github.base_ref }}
           release_strategy: tag
-          tag_format: "%major%.%minor%.%patch%-SNAPSHOT"
+          tag_format: ${{ env.TAG_FORMAT }}
 
-      - name: Create Draft Release
-        uses: release-drafter/release-drafter@v5.12.1
+  publish:
+    name: Publish Package
+    runs-on: ubuntu-latest
+    needs: tag
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@master
         with:
-          disable-autolabeler: true
-          tag: ${{ steps.snapshot_tag.outputs.tag }}
-          version: ${{ steps.snapshot_tag.outputs.tag }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ github.base_ref }}
 
       - name: Publish Package
         if: steps.snapshot_tag.outputs.tag
@@ -44,50 +52,26 @@ jobs:
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.NEXUS_PASSWORD }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SIGNING_KEY }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
-          ORG_GRADLE_PROJECT_CICD_TAG: ${{ steps.snapshot_tag.outputs.tag }}
+          ORG_GRADLE_PROJECT_CICD_TAG: ${{needs.tag.outputs.tag}}
 
   release:
     name: Create Release
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged && github.base_ref == 'master'
+    needs: [tag, publish]
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@master
+      - name: Create Draft Release
+        uses: release-drafter/release-drafter@v5.12.1
+        if: github.base_ref == 'develop'
         with:
-          ref: 'master'
-
-      - name: Create Tag
-        id: create_tag
-        uses: K-Phoen/semver-release-action@master
+          tag: ${{needs.tag.outputs.tag}}
+          version: ${{needs.tag.outputs.tag}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          release_branch: master
-          release_strategy: tag
-          tag_format: "%major%.%minor%.%patch%"
-      
+
       - name: Create Release
-        if: steps.create_tag.outputs.tag
+        if: github.base_ref == 'master'
         uses: Roang-zero1/github-create-release-action@master
         with:
-          created_tag: ${{ steps.create_tag.outputs.tag }}
+          created_tag: ${{needs.tag.outputs.tag}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set up JDK 1.8
-        if: steps.create_tag.outputs.tag
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Publish Package
-        if: steps.create_tag.outputs.tag
-        run: |
-          chmod +x gradlew
-          ./gradlew publish closeAndReleaseRepository
-        env:
-          ORG_GRADLE_PROJECT_nexusUsername: ${{ secrets.NEXUS_USERNAME }}
-          ORG_GRADLE_PROJECT_nexusPassword: ${{ secrets.NEXUS_PASSWORD }}
-          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SIGNING_KEY }}
-          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
-          ORG_GRADLE_PROJECT_CICD_TAG: ${{ steps.create_tag.outputs.tag }}
