--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,18 @@ jobs:
           entrypoint: npm-groovy-lint
           args: --failon warning -l warning -p src
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r tests/requirements.txt
+
+      - name: Run pre-commit
+        run: |
+          pre-commit run --all-files
+
   tests:
     name: Functional
     needs: linting
