--- a/.github/workflows/pr_label.yml
+++ b/.github/workflows/pr_label.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   label:
     name: Check Labels
-    if: github.base_ref == 'develop' || github.base_ref == 'master'
+    if: github.event.pull_request.base.ref == 'develop' || github.event.pull_request.base.ref == 'master'
     runs-on: ubuntu-latest
     steps:
       - name: Check Labels
