--- a/build.gradle
+++ b/build.gradle
@@ -122,6 +122,7 @@ repositories {
 dependencies {
     // Use the latest Groovy version for building this library
     compileOnly('org.codehaus.groovy:groovy-all:2.5.11')
+    compileOnly('org.jenkins-ci.main:jenkins-core:2.85')
     compileOnly('com.cloudbees:groovy-cps:1.32')
 }
 
