--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,17 +1,26 @@
+appdirs==1.4.4
 attrs==20.3.0
 certifi==2020.12.5
+cfgv==3.2.0
 chardet==4.0.0
+distlib==0.3.1
 docker==4.4.4
+filelock==3.0.12
+identify==2.1.2
 idna==2.10
 iniconfig==1.1.1
+nodeenv==1.5.0
 packaging==20.9
 pluggy==0.13.1
 pre-commit==2.11.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.2
+PyYAML==5.4.1
 requests==2.25.1
+semver==2.13.0
 six==1.15.0
 toml==0.10.2
 urllib3==1.26.3
+virtualenv==20.4.2
 websocket-client==0.58.0
