add check for change type label

--- a/.github/workflows/pr_label.yml
+++ b/.github/workflows/pr_label.yml
@@ -9,9 +9,16 @@ jobs:
     name: Check Labels
     runs-on: ubuntu-latest
     steps:
-      - name: Check Labels
+      - name: Has semver label
         uses: jesusvasquez333/verify-pr-label-action@v1.4.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           valid-labels: 'major, minor, patch'
+          pull-request-number: ${{ github.event.pull_request.number }}
+
+      - name: Had change type label
+        uses: jesusvasquez333/verify-pr-label-action@v1.4.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          valid-labels: 'feature, enhancement, fix, bugfix, bug, chore'
           pull-request-number: ${{ github.event.pull_request.number }}
