move labels to correct config file

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -18,3 +18,10 @@ template: |
   ## Changes
 
   $CHANGES
+include-labels:
+  - 'feature'
+  - 'enhancement'
+  - 'fix'
+  - 'bugfix'
+  - 'bug'
+  - 'chore'
