--- a/.groovylintrc.json
+++ b/.groovylintrc.json
@@ -1,6 +1,12 @@
 {
     "extends": "all",
     "rules": {
+        "BlockEndsWithBlankLine": {
+            "enabled": false
+        },
+        "BlockStartsWithBlankLine": {
+            "enabled": false
+        },
         "CompileStatic": {
             "enabled": false
         },
