add JavaVersion for VSCode

--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,10 @@ version = project.findProperty('CICD_TAG') ?: '0.0.0-DEV'
 group = 'io.github.dontshavetheyak'
 
 java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
     withSourcesJar()
 }
-
 
 groovydoc {
     use = true
