hard code docker image

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,4 @@ jobs:
           pip install -r tests/requirements.txt
 
       - name: Test with pytest
-        env:
-          RUNNER_IMAGE: shadycuz/jenkins-std-lib
-        run: |
-          pytest
+        run: pytest
