relint code using default groovy rules

--- a/.groovylintrc.json
+++ b/.groovylintrc.json
@@ -1,31 +1,13 @@
 {
-    "extends": "all",
+    "extends": "recommended",
     "rules": {
-        "BlockEndsWithBlankLine": {
-            "enabled": false
-        },
-        "BlockStartsWithBlankLine": {
-            "enabled": false
-        },
         "CompileStatic": {
-            "enabled": false
-        },
-        "ImplicitClosureParameter": {
-            "enabled": false
-        },
-        "LineLength": {
             "enabled": false
         },
         "SerializableClassMustDefineSerialVersionUID": {
             "enabled": false
         },
-        "SpaceAroundMapEntryColon": {
-            "enabled": false
-        },
-        "UnnecessaryGetter": {
-            "enabled": false
-        },
-        "UnnecessaryReturnKeyword": {
+        "UnnecessaryParenthesesForMethodCallWithClosure": {
             "enabled": false
         }
     }
