--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,10 +51,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2.2.2
 
+      - name: Python Cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('tests/requirements.txt') }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r tests/requirements.txt
+          pip install --upgrade --upgrade-strategy eager -r tests/requirements.txt
 
       - name: Test with pytest
         run: pytest
