--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     rev: v0.3.0
     hooks:
       - id: gradle-build
+        args: ['-w', --wrapper]
   - repo: local
     hooks:
       - id: groovy-lint
