--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2.3.4
 
+      - name: Run FOSSA scan and upload build data
+        uses: fossa-contrib/fossa-action@v1.1.4
+        with:
+          fossa-api-key: 7c94ee8610054ec8084c954b58615e0e
+
       - name: Set up Python
         uses: actions/setup-python@v2.2.2
 
