add overview text to generated groovdoc

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ java {
 
 groovydoc {
     use = true
-    source = sourceSets.main.groovy
+    overviewText = resources.text.fromString('Bringing the Zen of Python to Jenkins.')
 }
 
 task groovydocJar(type: Jar, dependsOn: groovydoc ) {
