make docker build faster when only plugin changes

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,9 +2,12 @@ FROM jenkins/jenkinsfile-runner:latest
 
 RUN apt-get update && apt-get install -y wget git curl sudo && rm -rf /var/lib/apt/lists/* && curl -fsSL https://get.docker.com -o get-docker.sh && sh get-docker.sh
 
+## Have no clue what this does
+RUN cd /app/jenkins && jar -cvf jenkins.war *
+
 ## Plugins
 COPY *-plugins.txt /usr/share/jenkins/ref/
-RUN cd /app/jenkins && jar -cvf jenkins.war * && cat /usr/share/jenkins/ref/lib-plugins.txt >> /usr/share/jenkins/ref/runner-plugins.txt
+RUN cat /usr/share/jenkins/ref/lib-plugins.txt >> /usr/share/jenkins/ref/runner-plugins.txt
 RUN java -jar /app/bin/jenkins-plugin-manager.jar --war /app/jenkins/jenkins.war --plugin-file /usr/share/jenkins/ref/runner-plugins.txt && rm /app/jenkins/jenkins.war
 
 VOLUME /usr/share/jenkins/ref/casc
