--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release
+        id: release_info
         uses: release-drafter/release-drafter@v5.15.0
         if: github.base_ref == 'master'
         with:
@@ -89,3 +90,21 @@ jobs:
           publish: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Tweet Release Info
+        id: tweet
+        if: github.base_ref == 'master'
+        uses: snow-actions/tweet@v1.1.1
+        env:
+          CONSUMER_API_KEY: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
+          CONSUMER_API_SECRET_KEY: ${{ secrets.TWITTER_CONSUMER_API_SECRET_KEY }}
+          ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+        with:
+          status: |
+            Released ${{ steps.release_info.outputs.name }}
+            ${{ steps.release_info.outputs.html_url }}
+
+      - name: Twitter response
+        if: github.base_ref == 'master'
+        run: echo ${{ steps.tweet.outputs.response }}
