Allow white space on the first line after method declaration. I find that it's much easier for me to read code when it has ample white space.

--- a/.groovylintrc.json
+++ b/.groovylintrc.json
@@ -1,6 +1,9 @@
 {
     "extends": "recommended",
     "rules": {
+        "BlockStartsWithBlankLine": {
+            "enabled": false
+        },
         "CompileStatic": {
             "enabled": false
         },
