--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
 	// Sets the run context to one level up instead of the .devcontainer folder.
 	"context": "..",
 	// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
-	"dockerFile": "../.devcontainer/Dockerfile",
+	"dockerFile": "../docker/dev/Dockerfile",
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
 		"editor.insertSpaces": true,
