--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   prod:
-    name: Build and Push Prod
+    name: Build and Push
     runs-on: ubuntu-latest
     steps:
 
@@ -23,6 +23,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
+        id: prod_image
         uses: docker/build-push-action@v2
         with:
           push: true
@@ -30,3 +31,15 @@ jobs:
           file: docker/prod/Dockerfile
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: dsty/jenkins:demo
+          file: docker/dev/Dockerfile
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            "baseImage=${{ steps.prod_image.outputs.digest }}"
