--- a/docker/prod/Dockerfile
+++ b/docker/prod/Dockerfile
@@ -15,6 +15,10 @@ RUN apt-get update && \
 RUN curl -fsSL https://get.docker.com -o get-docker.sh && \
     sh get-docker.sh
 
+USER jenkins
+
+WORKDIR $JENKINS_HOME
+
 ## Plugins for container
 RUN jenkins-plugin-cli --plugins filesystem_scm git
 
@@ -27,3 +31,5 @@ COPY docker/prod/init_scripts/* /usr/share/jenkins/ref/init.groovy.d/
 
 ENV JENKINS_SLAVE_AGENT_PORT=
 ENV JENKINS_OPTS="--httpPort=80"
+
+EXPOSE 80
