only build release images on non snapshot tags

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,6 +47,7 @@ jobs:
   release:
     name: Build and Push Release Images
     runs-on: ubuntu-latest
+    if: contains(github.ref_name, 'SNAPSHOT') != true
     steps:
 
       - name: Set up Docker Buildx
