--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git tag ${{ steps.calculate.outputs.next_tag }} -am "Created by Github Actions"
-          git push origin --tags
+          git push origin --tags -f
 
   publish:
     name: Publish Package
