add debug for docker info

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,12 @@ on:
       - 'docker/**'
 
 jobs:
+  debug:
+    name: Debug docker
+    runs-on: ubuntu-latest
+    steps:
+      - run: docker info
+
   linting:
     name: Lint
     runs-on: ubuntu-latest
