force docker vfs storage driver in jfr

--- a/docker/jfr/Dockerfile
+++ b/docker/jfr/Dockerfile
@@ -14,5 +14,6 @@ RUN cd /usr/share/jenkins && jar -xvf jenkins.war
 RUN rm /etc/s6-overlay/s6-rc.d/user/contents.d/jenkins
 
 COPY /docker/jfr/run_job.sh /usr/bin/run_job
+COPY docker/jfr/root /
 
 ENV JENKINS_HOME="/usr/share/jenkins/ref/"
