increase swap space

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,5 +69,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install --upgrade --upgrade-strategy eager -r tests/requirements.txt
 
+      - name: Set Swap Space
+        uses: pierotofy/set-swap-space@master
+        with:
+          swap-size-gb: 10
+
       - name: Test with pytest
         run: pytest
